# castells

./: ADDITIONAL_OPTIMIZATIONS.md  ALL_IMPROVEMENTS_COMPLETE.md  ALL_IMPROVEMENTS_FINAL.md  ANALYTICS_SETUP.md  AUTO_IMPROVEMENTS_COMPLETED.md  App.tsx  BUGS_AND_OPTIMIZATION_REPORT.md  BUTTONS_STANDARDIZED.md  COMPREHENSIVE_AUDIT.md  FINAL_AUDIT_COMPLETE.md  FIXES_APPLIED.md  FORMS_SETUP.md  FULL_SITE_OPTIMIZATION_REPORT.md  GEO_FINAL_OPTIMIZATION.md  GEO_OPTIMIZATION_COMPLETE.md  GTM_SETUP.md  IMPROVEMENTS_PROGRESS.md  IMPROVEMENTS_ROADMAP.md  MAXIMUM_PERFORMANCE_OPTIMIZATIONS.md  MISSING_SECTIONS_ANALYSIS.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_STATUS.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  SEO_AUDIT_FINAL.md  SEO_AUDIT_REPORT.md  SMALL_IMPROVEMENTS_APPLIED.md  STANDARDIZATION_COMPLETE.md  STANDARDIZATION_REPORT.md  UNUSED_COMPONENTS_ANALYSIS.md  WEBP_OPTIMIZATION_GUIDE.md  components.json  constants.ts  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  (+5 more)
Master/: AGENT_MASTER_PROMPT.md  (+8 more)
ProjectX/backend/: Dockerfile  alembic.ini  pyproject.toml
ProjectX/backend/alembic/: env.py
ProjectX/backend/alembic/versions/: 001_create_orgs_and_leads_tables.py  002_create_users_table.py  003_create_phase3_tables.py  004_create_pipeline_tables.py
ProjectX/backend/app/: main.py  worker.py
ProjectX/backend/app/api/: deps.py
ProjectX/backend/app/core/: celery_app.py  config.py
ProjectX/backend/app/models/: enrichment.py  lead.py  organization.py  pipeline.py  seo.py  settings.py  user.py  vision.py
(+393 files in other folders)
